Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23845

qmltest breaks with latest qtbase: "Must add columns before attempting to add rows."

    XMLWordPrintable

Details

    • 18a51f0732a3276fbe314433a090efafeb6e22d4

    Description

      Change fdedb49b76b8f9ad69611fbfea6b8371ae1ec3a1 in qtbase "Blow up earlier when adding test rows without columns." results in a regression in qtdeclarative/examples/qmltest:

      ./tst_qmltestexample 
      Qml debugging is enabled. Only use this in a safe environment!
      No platform plugin argument was specified, defaulting to "xcb".
      
      Information of screen 346:
        width.........: 1600
        height........: 1200
        depth.........: 24
        white pixel...: ffffff
        black pixel...: 0
      
      Running window manager: Compiz
      QIBusPlatformInputContext: ibus config file '/home/kkoehne/.config/ibus/bus/1862d5aa58cc0c55f69e682300000008-unix-0' does not exist.
      QIBusPlatformInputContext: not connected.
      ********* Start testing of qmltest *********
      Config: Using QTest library 5.0.0, Qt 5.0.0
      PASS   : qmltest::BasicTests::initTestCase()
      XFAIL  : qmltest::BasicTests::test_expecting() this is the fail we wanted
         Loc: [/home/kkoehne/dev/qt/qt-5/qtdeclarative/examples/qmltest/tst_basic.qml(63)]
      PASS   : qmltest::BasicTests::test_expecting()
      XFAIL  : qmltest::BasicTests::test_fail() this is the fail we wanted
         Loc: [/home/kkoehne/dev/qt/qt-5/qtdeclarative/examples/qmltest/tst_basic.qml(54)]
      PASS   : qmltest::BasicTests::test_fail()
      PASS   : qmltest::BasicTests::test_pass()
      SKIP   : qmltest::BasicTests::test_skip() skipping
         Loc: [/home/kkoehne/dev/qt/qt-5/qtdeclarative/examples/qmltest/tst_basic.qml(58)]
      QFATAL : qmltest::BasicTests::test_table() ASSERT failure in QTest::newRow(): "Must add columns before attempting to add rows.", file /home/kkoehne/dev/qt/qt-5/qtbase/src/testlib/qtestcase.cpp, line 2289
      FAIL!  : qmltest::BasicTests::test_table() Received a fatal error.
         Loc: [Unknown file(0)]
      Totals: 4 passed, 1 failed, 1 skipped
      ********* Finished testing of qmltest *********
      Aborted (core dumped)
      
      

      Attachments

        For Gerrit Dashboard: QTBUG-23845
        # Subject Branch Project Status CR V

        Activity

          People

            charles Charles Yin (closed Nokia identity) (Inactive)
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes