Add dummy test column for data driven test in qmltest

Normally, data driven test with QTest requires add columns before
adding new data rows, otherwise QTest might results into warning
or error. However, qmltest does the data driven test in its own way
so no columns info needed. So add a dummy column here to make QTest happy.

Task-number:QTBUG-23845
Change-Id: I1bfed663fa7b58d71e0cf898db6bd8ae61dae46b
Reviewed-by: Rohan McGovern <rohan.mcgovern@nokia.com>
Reviewed-by: Robin Burchell <robin+qt@viroteck.net>